--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,56 @@
-page-home {
+@mixin size($width, $height: $width) {
+	width: $width;
+	height: $height;
+}
 
+page-home {
+	.mainView {
+		background: linear-gradient(180deg, $dark-grey, $dark-grey-2);
+	}
+
+	.top-group {
+		position: absolute;
+		overflow: hidden;
+
+		top: 5%;
+		left: 5%;
+
+		text-align: center;
+	}
+
+	.bottom-group {
+		position: absolute;
+
+		top: 50%;
+		left: 0;
+		width: 100%;
+		height: 50%;
+
+		overflow: scroll;
+	}
+
+	.btn-block {
+		@include size(100px);
+	}
+
+	.btn-half-block {
+		width: 100px;
+		height: 50px;
+	}
+
+	ion-icon {
+		font-size: 80px;
+	}
+
+	ion-row {
+		height: 100%;
+		flex-wrap: wrap;
+	}
+
+	ion-col {
+		flex: 0 0 25%;
+		max-width: 25%;
+		text-align: center;
+		padding: 10px 5px;
+	}
 }
