--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,15 +5,12 @@
 // roboto, and noto sans fonts
 $font-path: "../assets/fonts";
 
-
 // The app direction is used to include
 // rtl styles in your app. For more info, please see:
 // http://ionicframework.com/docs/theming/rtl-support/
 $app-direction: ltr;
 
-
 @import "ionic.globals";
-
 
 // Shared Variables
 // --------------------------------------------------
@@ -21,9 +18,6 @@ $app-direction: ltr;
 // the Sass variables found in Ionic's source scss files.
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
-
-
-
 
 // Named Color Variables
 // --------------------------------------------------
@@ -33,35 +27,49 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+$white: #FFFFFF !default;
+$light-grey: #f5f4f6 !default;
+$dark-grey: #444e6b !default;
+$dark-grey-2: #2c3450 !default;
+$orange: #f88b66 !default;
+$pink: #fb67a1 !default;
+$pink-2: #fc7788 !default;
+$pink-3: #e354e2 !default;
+$purple: #b64def !default;
+$blue: #7b7bf9 !default;
+$blue-2: #706bf9 !default;
+
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+	primary: #7aa2fc,
+	secondary: $light-grey,
+	success: #9de464,
+	warning: #f8d157,
+	danger: #e76868,
+	accent: #7967e8,
+	light: #dadef8,
+	dark: #3d4668
 );
 
+$colors-bootstrap: (
+	primary: #488aff,
+	secondary: $light-grey,
+	success: #32db64,
+	danger: #f53d3d,
+	light: #f4f4f4,
+	dark: #222
+);
 
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 
-
-
-
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
-
-
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
-
-
-
 
 // App Theme
 // --------------------------------------------------
@@ -72,14 +80,12 @@ $colors: (
 
 @import "ionic.theme.default";
 
-
 // Ionicons
 // --------------------------------------------------
 // The premium icon font for Ionic. For more info, please see:
 // http://ionicframework.com/docs/ionicons/
 
 @import "ionic.ionicons";
-
 
 // Fonts
 // --------------------------------------------------
